# AutoLog

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  autolog.spec  main.py  pyproject.toml  requirements.txt  sample.csv  version.txt
.github/workflows/: build-and-release.yml
autolog/: adapters.py  app.py  constants.py  exceptions.py  gui.py  issue_parser.py  jira_client.py  keyring_manager.py  logging_config.py  models.py  update_helpers.py  widgets.py  worklog_processor.py
autolog/parsers/: file_parsers.py  issue_parser.py
autolog/providers/: ___init__.py  base.py  factory.py  kimai.py  odoo.py
samples/: kimai.csv  odoo.xlsx
