[project]
name = "autolog"
version = "0.1.0"
description = "automates the process of logging work entries into Jira"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.18",
    "customtkinter>=5.2.2",
    "jira>=3.8.0",
    "keyring>=25.6.0",
]

[dependency-groups]
dev = [
    "autoflake>=2.3.1",
    "black>=25.1.0",
    "isort>=6.0.1",
    "pre-commit>=4.2.0",
    "ruff>=0.11.8",
]


[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
combine_as_imports = true
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = ["autolog"]
skip = [".venv", "build", "dist"]

[tool.ruff]
line-length = 88
target-version = "py312"
fix = true
unsafe-fixes = false  # Set to true if you're okay with some potentially risky autofixes
show-source = true
preview = true

select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # isort
  "N",  # pep8-naming
  "UP", # pyupgrade
  "B",  # flake8-bugbear
  "C4", # flake8-comprehensions
  "SIM", # flake8-simplify
  "RUF" # ruff-specific rules
]

ignore = [
  "E203",  # Whitespace before ':' (conflicts with Black)
  "W503",  # Line break before binary operator (conflicts with Black)
]

exclude = [
  ".git",
  ".venv",
  "build",
  "dist",
  "__pycache__",
]

[tool.ruff.isort]
known-first-party = ["autolog"]
combine-as-imports = true
force-single-line = false
